--- a/sass/01_global/basics.sass
+++ b/sass/01_global/basics.sass
@@ -44,8 +44,11 @@ h1,h2,h3,h4,h5,h6
 span, a, p
   font-size: $size
   font-weight: 100
-  text-decoration: none
+  text-decoration: none !important
   list-style: none
   font-family: $regular
   font-smoothing: antialiased
   font-smoothing: grayscale
+
+.bg-grey
+  background-color: #101010
