--- a/sass/style.sass
+++ b/sass/style.sass
@@ -33,6 +33,8 @@
 @import '03_sections/hero2'
 @import '03_sections/body'
 @import '03_sections/values'
+@import '03_sections/chance'
+@import '03_sections/about'
 // Add the Styles for your Section right here
 
 // External Libaries
