--- a/style.css
+++ b/style.css
@@ -62,11 +62,15 @@ h1.h6, h2.h6, h3.h6, h4.h6, h5.h6, h6.h6 {
 span, a, p {
   font-size: 18px;
   font-weight: 100;
-  text-decoration: none;
+  text-decoration: none !important;
   list-style: none;
   font-family: futura;
   font-smoothing: antialiased;
   font-smoothing: grayscale;
+}
+
+.bg-grey {
+  background-color: #101010;
 }
 
 @-webkit-keyframes dash {
@@ -657,6 +661,11 @@ form button[type=submit]::after {
           box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);
   position: relative;
 }
+@media (max-width: 992px) {
+  #hero2 {
+    margin-bottom: 50px;
+  }
+}
 #hero2 .col-12 {
   position: relative;
 }
@@ -665,11 +674,22 @@ form button[type=submit]::after {
   font-size: 8vw;
   margin-bottom: 50px;
 }
+#hero2 h1:hover svg {
+  -webkit-animation: dash 0.5s linear forwards;
+          animation: dash 0.5s linear forwards;
+}
 #hero2 h1 svg {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   position: absolute;
   left: 50%;
+  height: 100%;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+}
+#hero2 h1 .animate {
+  -webkit-animation: dash 0.5s linear forwards;
+          animation: dash 0.5s linear forwards;
 }
 #hero2 p {
   color: #FFFFFF;
@@ -880,4 +900,104 @@ form button[type=submit]::after {
 }
 #values h3 {
   color: white;
+}
+@media (max-width: 992px) {
+  #values h2 {
+    text-align: center;
+  }
+}
+
+#chance {
+  margin-bottom: 150px;
+}
+#chance svg {
+  font-size: 36px;
+}
+#chance h3 {
+  margin-bottom: 0px;
+}
+#chance a {
+  margin-top: 30px;
+}
+
+#history {
+  margin-bottom: 300px;
+}
+@media (max-width: 1400px) {
+  #history {
+    margin-bottom: 100px;
+  }
+}
+@media (max-width: 768px) {
+  #history {
+    margin: 50px 0;
+  }
+}
+#history .topic__container {
+  cursor: pointer;
+  width: 100%;
+  margin: 150px auto;
+}
+@media (max-width: 992px) {
+  #history .topic__container {
+    margin: 100px auto;
+  }
+}
+@media (max-width: 768px) {
+  #history .topic__container {
+    margin: 50px auto;
+  }
+}
+#history .topic__container:hover .image__container {
+  width: calc(100% - 30px);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+#history .topic__container.second {
+  -webkit-transform: translateY(300px);
+          transform: translateY(300px);
+}
+@media (max-width: 1400px) {
+  #history .topic__container.second {
+    -webkit-transform: translateY(200px);
+            transform: translateY(200px);
+  }
+}
+@media (max-width: 768px) {
+  #history .topic__container.second {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+#history .topic__container .image__container {
+  margin: auto;
+  width: 100%;
+  height: 0;
+  padding-bottom: 133.3333%;
+  overflow: hidden;
+  max-height: 100vh;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  position: relative;
+}
+#history .topic__container .image__container .topic__image {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+#history .topic__container .text__container {
+  margin: 50px auto 0;
+  width: calc(100% - 60px);
+}
+#history .topic__container .text__container h3 {
+  color: #FFFFFF;
+}
+#history .topic__container .text__container p {
+  color: #707070;
 }
