first stages contact page

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -33,6 +33,7 @@
 @import '03_sections/hero2'
 @import '03_sections/body'
 @import '03_sections/values'
+@import '03_sections/contact'
 // Add the Styles for your Section right here
 
 // External Libaries
