--- a/sass/01_global/keyframes.sass
+++ b/sass/01_global/keyframes.sass
@@ -9,3 +9,9 @@
     stroke-dashoffset: 0
   to
     stroke-dashoffset: 1000
+
+@keyframes circle
+  from
+    stroke-dashoffset: 1200
+  to
+    stroke-dashoffset: 0
