--- a/sass/02_local/navigation.sass
+++ b/sass/02_local/navigation.sass
@@ -6,9 +6,13 @@
   background: none
   color: white
 
+  @include lg
+    display: none
+
   .container-fluid
     width: 90%
     margin: auto
+
     .row
       .nav-img-col
         display: flex
@@ -65,3 +69,119 @@
     a
       color: inherit
       text-decoration: none
+
+#mobile__navigation
+  width: 90%
+  z-index: 110
+  position: fixed
+  top: 0
+  left: 50%
+  transform: translateX(-50%)
+  display: none
+
+  @include lg
+    display: block
+
+  .container-fluid
+    width: 90%
+    margin: auto
+    padding: 0
+
+    .row
+      .nav-img-col
+        display: flex
+        flex-direction: row
+        justify-content: flex-start
+
+        .logo
+          max-height: 100%
+          height: 100px
+          margin-right: 100px
+
+      .nav-icon-col
+        justify-content: flex-end
+        align-items: center
+
+  .burger
+    background: none
+    outline: none
+    border: none
+    position: relative
+    width: 22px
+    height: 10px
+    padding: 10px 10px
+    box-sizing: content-box
+
+    &::before,
+    &::after
+      content: ''
+      width: 22px
+      height: 2px
+      background: $color1
+      display: block
+      position: absolute
+      border-radius: 1px
+      transition: transform 0.2s ease, top 0.2s ease 0.1s
+
+    &::before
+      top: 15px
+
+    &::after
+      top: calc(100% - 20px)
+
+    &.open
+      &::before,
+      &::after
+        transition: top 0.2s ease, transform 0.2s ease 0.1s
+        top: calc(50% - 1px)
+
+      &::before
+        transform: rotate(45deg)
+
+      &::after
+        transform: rotate(-45deg)
+
+
+#nav__items
+  width: 100%
+  height: 100vh
+  background: rgb(0,0,0)
+  background: linear-gradient(180deg, rgba(0,0,0,1) 80%, rgba(250,175,58,0) 100%)
+  z-index: 100
+  position: fixed
+  top: -100vh
+  transition: .5s
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  display: none
+
+  @include lg
+    display: flex
+
+  &.active
+    top: 0
+
+  .nav-item__container
+
+    #menu-header
+      position: relative
+      display: flex
+      flex-direction: column
+
+      .menu-item
+        a
+          font-size: 12vw
+          color: $white
+
+        &.current-menu-item
+          position: relative
+
+          svg
+            width: 100%
+            position: absolute
+            top: 50%
+            left: 50%
+            transform: translate(-50%,-50%)
+            z-index: -1
