--- a/sass/03_sections/chance.sass
+++ b/sass/03_sections/chance.sass
@@ -5,12 +5,20 @@
         font-size: 36px
 
     h3
-        margin-bottom: 0px
+      margin-bottom: 0px
+
+    h2
+      font-size: 3vw
+      margin-bottom: 50px
+
+      @include lg
+        font-size: 10vw
 
     a
         margin-top: 30px
 
     .bg-grey
+      background: #0D0D0D
       transition: .2s
 
       h3, svg
