--- a/sass/03_sections/hero.sass
+++ b/sass/03_sections/hero.sass
@@ -8,6 +8,9 @@
   box-shadow: $shadow
   position: relative
 
+  @include lg
+    margin-top: 100px
+
   .col-12
     position: relative
 
@@ -33,6 +36,13 @@
         svg
           animation: dash .5s linear forwards
 
+      &.active
+        color: $white
+        transition: .2s
+
+        svg
+          animation: dash .5s linear forwards
+
       svg
         width: 100%
         height: 30px
@@ -50,8 +60,6 @@
 
   .hero__image
     .row
-      height: 100%
-
       .sticky__container
         position: relative
         // height: 200vh
@@ -82,19 +90,18 @@
         .image__container
           width: 100%
           height: 0
-          padding-bottom: 133.333%
           height: auto
           overflow: hidden
           position: relative
 
           img
-            position: absolute
-            height: 100%
-            width: auto
-            max-width: none
-            top: 50%
-            left: 50%
-            transform: translate(-50%,-50%)
+            position: relative
+            height: auto
+            width: 100%
+            max-width: 100%
+
+            @include lg
+              margin-top: 100px
 
 
   .data__img
