--- a/sass/03_sections/hero2.sass
+++ b/sass/03_sections/hero2.sass
@@ -10,6 +10,7 @@
 
   @include lg
     margin-bottom: 50px
+    margin-top: 100px
 
   .col-12
     position: relative
@@ -19,6 +20,10 @@
     font-size: 8vw
     margin-bottom: 50px
     z-index: 0
+
+    @include lg
+      font-size: 12vw
+      margin-bottom: 30px
 
     &.load__effect
       z-index: 3
